================================================================================
Change history for glaciers
================================================================================

DESIGN ISSUES (user interface):
- [159] user-interface design for climate experiments

HIGH PRIORITY:
- start to fade borehole after surface point has traveled 2km, fade to nothing over 1km
- increase zoom on vertical axis by 2x
- add moving glyphs to ice surface to show motion

MEDIUM PRIORITY:
- add pseudo 3D model & view for rocks
- create rocks at random elevations in ice cross-section above ELA, at random distance across valley width
- deposit rocks at terminus to create moraine
- delete rocks on valley floor when covered by an advancing glacier
- visual representation of snowfall
- always collect data for time-based graphs, keep "latest" & "historical" data points, compress historical, limit historical size
- add zoom in/out button for time-based graphs; show scrolling "latest" data or complete "historical"
- extruded portion of ice jiggles at headwall while it's evolving
- remove yaw from mountains image perspective, or add yaw to ice perspective (wait until tools behavior is finalized)
- add Advanced panel
- implement Save/Load feature
- close & reopen graph windows when switching modules
- add Help menu option to show pictures of real glaciers
- make mercury in thermometers move as temperature changes
- main control panel should be the same height in all modules

LOW PRIORITY:
- right edge of ice thickness tool icon is clipped (see Unfuddle #558)
- make flags fall over (with somewhat random orientation?) when they hit the valley floor
- remove registration points from mountains image
- creating a tool and dragging it straight to the trash doesn't work because we're in the middle of an event sequence
- developer controls for ice velocity "look"?
- make mountains image big enough so that all we see is sky when the birds-eye view is made very wide