@@ -6,9 +6,9 @@ DESIGN ISSUES (user interface):
 - [159] user-interface design for climate experiments
 
 HIGH PRIORITY:
-- start to fade borehole after surface point has traveled 2km, fade to nothing over 1km
 - increase zoom on vertical axis by 2x
 - add moving glyphs to ice surface to show motion
+- borehole hooks back near the surface when climate is warmed
 
 MEDIUM PRIORITY:
 - add pseudo 3D model & view for rocks
@@ -71,6 +71,8 @@ CLEANUP:
 
 
 DONE:
+5/19/08 - use alpha channel to visually represent filling in of borehole
+5/19/08 - start to fill in borehole after 40 years, 20 years to fill in completely
 5/19/08 - add model debug output for add/remove model elements
 5/19/08 - prune borehole points so that at most one point is on the glacier surface
 5/17/08 - add direction arrows to value display in GPS receiver tool
